# polkadot_signal

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Cargo_simple.toml  Makefile  README.md  TESTING.md
client/: package-lock.json  package.json
client/src/: AgentClient.ts  SignalKeysClient.ts  agent_example.ts  example.ts  index.ts
examples/: Cargo.toml
examples/src/: demo.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AgentComponents.css  AgentDiscoveryPanel.js  AgentPanel.js  TaskQueuePanel.js
node/: Cargo.toml
node/src/: cli.rs  command.rs  main.rs  rpc.rs  service.rs
p2p/: Cargo.toml
p2p/src/: behaviour.rs  error.rs  handler.rs  lib.rs  network.rs  protocol.rs
pallets/agent-registry/: Cargo.toml
pallets/agent-registry/src/: lib.rs
pallets/message-queue/: Cargo.toml
pallets/message-queue/src/: lib.rs
pallets/signal-groups/: Cargo.toml
pallets/signal-groups/src/: lib.rs
pallets/signal-keys/: Cargo.toml
pallets/signal-keys/src/: lib.rs  mock.rs  tests.rs
pallets/task-queue/: Cargo.toml
pallets/task-queue/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: agent_message.rs  double_ratchet.rs  error.rs  keys.rs  lib.rs  message.rs  session.rs  x3dh.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
storage/: Cargo.toml
storage/src/: error.rs  ipfs.rs  lib.rs  message_store.rs  offline_queue.rs
tests/: Cargo.toml  e2e_tests.rs
