[workspace]
resolver = "2"
members = [
    "protocol",
    "storage",
    "p2p",
    "node",
    "runtime",
    "pallets/signal-keys",
    "pallets/signal-groups",
    "pallets/message-queue",
    "pallets/agent-registry",
    "pallets/task-queue",
    "examples",
    "tests",
]

[workspace.package]
authors = ["Polkadot Signal Team"]
edition = "2021"
repository = "https://github.com/your-org/polkadot-signal"
license = "Apache-2.0"
