[package]
name = "p2p-messaging"
version = "0.1.0"
authors = ["Polkadot Signal Team"]
edition = "2021"
license = "Apache-2.0"
description = "P2P messaging layer for Polkadot Signal using libp2p"

[dependencies]
libp2p = { version = "0.52", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "autonat",
    "serde",
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1.0"
unsigned-varint = "0.7"

signal-protocol = { path = "../protocol" }

[dev-dependencies]
hex = "0.4"
