[package]
name = "signal-protocol"
version = "0.1.0"
authors = ["Polkadot Signal Team"]
edition = "2021"
license = "Apache-2.0"
description = "Signal protocol integration for Polkadot Signal"

[dependencies]
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
curve25519-dalek = { version = "4", features = ["digest", "legacy_compatibility"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]
hex = "0.4"
