[package]
name = "ipfs-storage"
version = "0.1.0"
authors = ["Polkadot Signal Team"]
edition = "2021"
license = "Apache-2.0"
description = "IPFS storage for offline messages in Polkadot Signal"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

signal-protocol = { path = "../protocol" }

[dev-dependencies]
tokio-test = "0.4"
