[package]
name = "pallet-signal-groups"
version = "0.1.0"
authors = ["Polkadot Signal Team"]
edition = "2021"
description = "Substrate pallet for Signal group management"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-runtime = { version = "41.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
